--- a/preamble.tex
+++ b/preamble.tex
@@ -75,3 +75,13 @@
 \newcommand{\restrict}[1]{_{|_{#1}}}
 \newcommand{\sus}{\Sigma}
 \def\R{\mathbb{R}}
+\newcommand{\dis}{\sqcup}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\pt}{\mathrm{pt}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\N}{\mathfrak{N}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\F}{\mathbb{F}}
+\newcommand{\K}{\mathbb{K}}
+\newcommand{\id}{\mathrm{id}}
+\def\H{\mathbb{H}}
