--- a/sources.bib
+++ b/sources.bib
@@ -137,6 +137,21 @@
        URL = {https://doi.org/10.1007/978-3-319-55084-8},
 }
 
+@article{kervaire,
+ ISSN = {0003486X, 19398980},
+ URL = {http://www.jstor.org/stable/1970128},
+ author = {Michel A. Kervaire and John W. Milnor},
+ journal = {Annals of Mathematics},
+ number = {3},
+ pages = {504--537},
+ publisher = {[Annals of Mathematics, Trustees of Princeton University on Behalf of the Annals of Mathematics, Mathematics Department, Princeton University]},
+ title = {Groups of Homotopy Spheres: I},
+ urldate = {2025-06-08},
+ volume = {77},
+ year = {1963}
+}
+
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
