--- a/preamble.tex
+++ b/preamble.tex
@@ -85,3 +85,5 @@
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\id}{\mathrm{id}}
 \def\H{\mathbb{H}}
+%\def{\ker}{\mathrm{ker}}
+\newcommand{\im}{\mathrm{im}}
